--- a/telecom_X2.ipynb
+++ b/telecom_X2.ipynb
@@ -317,11 +317,265 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb82b36a",
+   "metadata": {},
+   "source": [
+    "## Elimina columnas que no aportan valor al análisis o a los modelos predictivos, como identificadores únicos (por ejemplo, el ID del cliente). Estas columnas no ayudan en la predicción de la cancelación y pueden incluso perjudicar el desempeño de los modelos."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1802f03f",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "df.drop(columns=[\"customerID\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "12f16aba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Churn</th>\n",
+       "      <th>customer_gender</th>\n",
+       "      <th>customer_SeniorCitizen</th>\n",
+       "      <th>customer_Partner</th>\n",
+       "      <th>customer_Dependents</th>\n",
+       "      <th>customer_tenure</th>\n",
+       "      <th>phone_PhoneService</th>\n",
+       "      <th>phone_MultipleLines</th>\n",
+       "      <th>internet_InternetService</th>\n",
+       "      <th>internet_OnlineSecurity</th>\n",
+       "      <th>...</th>\n",
+       "      <th>internet_TechSupport</th>\n",
+       "      <th>internet_StreamingTV</th>\n",
+       "      <th>internet_StreamingMovies</th>\n",
+       "      <th>account_Contract</th>\n",
+       "      <th>account_PaperlessBilling</th>\n",
+       "      <th>account_PaymentMethod</th>\n",
+       "      <th>account_Charges_Monthly</th>\n",
+       "      <th>account_Charges_Total</th>\n",
+       "      <th>estimated_daily_charge</th>\n",
+       "      <th>Churn_bin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>No</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>One year</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mailed check</td>\n",
+       "      <td>65.6</td>\n",
+       "      <td>593.30</td>\n",
+       "      <td>2.19</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>No</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>DSL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Month-to-month</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Mailed check</td>\n",
+       "      <td>59.9</td>\n",
+       "      <td>542.40</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Fiber optic</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Month-to-month</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Electronic check</td>\n",
+       "      <td>73.9</td>\n",
+       "      <td>280.85</td>\n",
+       "      <td>2.46</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Fiber optic</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Month-to-month</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Electronic check</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>1237.85</td>\n",
+       "      <td>3.27</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Fiber optic</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Month-to-month</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mailed check</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>267.40</td>\n",
+       "      <td>2.80</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Churn customer_gender  customer_SeniorCitizen  customer_Partner  \\\n",
+       "0    No          Female                       0                 1   \n",
+       "1    No            Male                       0                 0   \n",
+       "2   Yes            Male                       0                 0   \n",
+       "3   Yes            Male                       1                 1   \n",
+       "4   Yes          Female                       1                 1   \n",
+       "\n",
+       "   customer_Dependents  customer_tenure  phone_PhoneService  \\\n",
+       "0                    1                9                   1   \n",
+       "1                    0                9                   1   \n",
+       "2                    0                4                   1   \n",
+       "3                    0               13                   1   \n",
+       "4                    0                3                   1   \n",
+       "\n",
+       "   phone_MultipleLines internet_InternetService  internet_OnlineSecurity  ...  \\\n",
+       "0                    0                      DSL                        0  ...   \n",
+       "1                    1                      DSL                        0  ...   \n",
+       "2                    0              Fiber optic                        0  ...   \n",
+       "3                    0              Fiber optic                        0  ...   \n",
+       "4                    0              Fiber optic                        0  ...   \n",
+       "\n",
+       "   internet_TechSupport  internet_StreamingTV  internet_StreamingMovies  \\\n",
+       "0                     1                     1                         0   \n",
+       "1                     0                     0                         1   \n",
+       "2                     0                     0                         0   \n",
+       "3                     0                     1                         1   \n",
+       "4                     1                     1                         0   \n",
+       "\n",
+       "   account_Contract  account_PaperlessBilling account_PaymentMethod  \\\n",
+       "0          One year                         1          Mailed check   \n",
+       "1    Month-to-month                         0          Mailed check   \n",
+       "2    Month-to-month                         1      Electronic check   \n",
+       "3    Month-to-month                         1      Electronic check   \n",
+       "4    Month-to-month                         1          Mailed check   \n",
+       "\n",
+       "   account_Charges_Monthly account_Charges_Total  estimated_daily_charge  \\\n",
+       "0                     65.6                593.30                    2.19   \n",
+       "1                     59.9                542.40                    2.00   \n",
+       "2                     73.9                280.85                    2.46   \n",
+       "3                     98.0               1237.85                    3.27   \n",
+       "4                     83.9                267.40                    2.80   \n",
+       "\n",
+       "   Churn_bin  \n",
+       "0          0  \n",
+       "1          0  \n",
+       "2          1  \n",
+       "3          1  \n",
+       "4          1  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d2ade6e",
+   "metadata": {},
    "source": []
   }
  ],
