--- a/telecom_X2.ipynb
+++ b/telecom_X2.ipynb
@@ -576,7 +576,83 @@
    "cell_type": "markdown",
    "id": "2d2ade6e",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Transforma las variables categóricas a formato numérico para hacerlas compatibles con los algoritmos de machine learning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ae1fd59",
+   "metadata": {},
+   "source": [
+    "Utiliza un método de codificación adecuado, como one-hot encoding.\n",
+    "\n",
+    "🔎 Sugerencia:\n",
+    "Puedes consultar este artículo para entender mejor cuándo usar get_dummies o OneHotEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "351c8559",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Churn', 'customer_SeniorCitizen', 'customer_Partner',\n",
+      "       'customer_Dependents', 'customer_tenure', 'phone_PhoneService',\n",
+      "       'phone_MultipleLines', 'internet_OnlineSecurity',\n",
+      "       'internet_OnlineBackup', 'internet_DeviceProtection',\n",
+      "       'internet_TechSupport', 'internet_StreamingTV',\n",
+      "       'internet_StreamingMovies', 'account_PaperlessBilling',\n",
+      "       'account_Charges_Monthly', 'account_Charges_Total',\n",
+      "       'estimated_daily_charge', 'Churn_bin', 'customer_gender_Male',\n",
+      "       'internet_InternetService_Fiber optic', 'internet_InternetService_No',\n",
+      "       'account_Contract_One year', 'account_Contract_Two year',\n",
+      "       'account_PaymentMethod_Credit card (automatic)',\n",
+      "       'account_PaymentMethod_Electronic check',\n",
+      "       'account_PaymentMethod_Mailed check'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lista de columnas categóricas a transformar\n",
+    "columnas_categoricas = [\n",
+    "    \"customer_gender\",\n",
+    "    \"internet_InternetService\",\n",
+    "    \"account_Contract\",\n",
+    "    \"account_PaymentMethod\"\n",
+    "]\n",
+    "\n",
+    "# One-hot encoding\n",
+    "df_encoded = pd.get_dummies(df, columns=columnas_categoricas, drop_first=True)\n",
+    "\n",
+    "# Mostrar nuevas columnas\n",
+    "print(df_encoded.columns)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74c33a46",
+   "metadata": {},
+   "source": [
+    "## Verificación de la Proporción de Cancelación (Churn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c99c7d5b",
+   "metadata": {},
+   "source": [
+    "Calcula la proporción de clientes que cancelaron en relación con los que permanecieron activos. Evalúa si existe un desbalance entre las clases, ya que esto puede impactar en los modelos predictivos y en el análisis de los resultados.\n",
+    "\n",
+    "🔎 Sugerencia:\n",
+    "Puedes usar value_counts() de pandas para obtener esta proporción:\n",
+    "Documentación oficial de value_counts()"
+   ]
   }
  ],
  "metadata": {
