--- a/telecom_X2.ipynb
+++ b/telecom_X2.ipynb
@@ -2017,6 +2017,94 @@
     "plt.ylabel('Gasto total ($)')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f16a1f2d",
+   "metadata": {},
+   "source": [
+    "# 🤖 Modelado Predictivo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57a5880f",
+   "metadata": {},
+   "source": [
+    "## Separación de Datos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2164f20",
+   "metadata": {},
+   "source": [
+    "Divide el conjunto de datos en entrenamiento y prueba para evaluar el rendimiento del modelo. Una división común es 70% para entrenamiento y 30% para prueba, o 80/20, dependiendo del tamaño de la base de datos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "23262521",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamaño conjunto entrenamiento: 4930 muestras\n",
+      "Tamaño conjunto prueba: 2113 muestras\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Definir variables predictoras (features) y objetivo (target)\n",
+    "X = df_encoded.drop('Churn_bin', axis=1)  # Todas menos la columna objetivo\n",
+    "y = df_encoded['Churn_bin']                # Variable objetivo\n",
+    "\n",
+    "# Separar en conjunto de entrenamiento y prueba\n",
+    "# stratify=y para mantener la proporción de clases en ambos conjuntos\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, \n",
+    "    test_size=0.3,       # 30% prueba, 70% entrenamiento\n",
+    "    random_state=42,     # Para reproducibilidad\n",
+    "    stratify=y           # Mantiene la proporción de clases igual en train y test\n",
+    ")\n",
+    "\n",
+    "# Verificar tamaños\n",
+    "print(f'Tamaño conjunto entrenamiento: {X_train.shape[0]} muestras')\n",
+    "print(f'Tamaño conjunto prueba: {X_test.shape[0]} muestras')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "8a39ae56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamaño conjunto entrenamiento: 4930 muestras (70.00%)\n",
+      "Tamaño conjunto prueba: 2113 muestras (30.00%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = X.shape[0]\n",
+    "\n",
+    "print(f'Tamaño conjunto entrenamiento: {X_train.shape[0]} muestras ({(X_train.shape[0]/total)*100:.2f}%)')\n",
+    "print(f'Tamaño conjunto prueba: {X_test.shape[0]} muestras ({(X_test.shape[0]/total)*100:.2f}%)')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f337cd25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
