Creación de Modelos

--- a/telecom_X2.ipynb
+++ b/telecom_X2.ipynb
@@ -2099,12 +2099,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0fd5e0d0",
+   "metadata": {},
+   "source": [
+    "## Creación de Modelos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "809d4187",
+   "metadata": {},
+   "source": [
+    "Crea al menos dos modelos diferentes para predecir la cancelación de clientes.\n",
+    "\n",
+    "- Un modelo puede requerir normalización, como Regresión Logística o KNN.\n",
+    "\n",
+    "- El otro modelo puede no requerir normalización, como Árbol de Decisión o Random Forest.\n",
+    "\n",
+    "💡 La decisión de aplicar o no la normalización depende de los modelos seleccionados. Ambos modelos pueden ser creados sin normalización, pero también es una opción combinar modelos con y sin normalización.\n",
+    "\n",
+    "**Justificación:**\n",
+    "\n",
+    "- Regresión Logística / KNN: Estos modelos son sensibles a la escala de los datos, por lo que la normalización es importante para que los coeficientes o las distancias se calculen correctamente.\n",
+    "\n",
+    "- Árbol de Decisión / Random Forest: Estos modelos no dependen de la escala de los datos, por lo que no es necesario aplicar normalización.\n",
+    "\n",
+    "Si decides normalizar los datos, deberías explicar cómo esta etapa asegura que los modelos basados en distancia o en optimización de parámetros no se vean sesgados por la magnitud de las variables."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f337cd25",
+   "execution_count": 74,
+   "id": "31e67e5a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Columnas numéricas continuas para normalizar\n",
+    "cols_num = ['account_Charges_Monthly', 'account_Charges_Total', 'estimated_daily_charge', 'customer_tenure']\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Normalizamos solo las columnas numéricas continuas del conjunto de entrenamiento\n",
+    "X_train_scaled = X_train.copy()\n",
+    "X_test_scaled = X_test.copy()\n",
+    "\n",
+    "X_train_scaled[cols_num] = scaler.fit_transform(X_train[cols_num])\n",
+    "X_test_scaled[cols_num] = scaler.transform(X_test[cols_num])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05bd9315",
+   "metadata": {},
+   "source": [
+    "Modelo 1: Regresión Logística (con normalización)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "d5c2d694",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reporte clasificación - Regresión Logística\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.84      0.89      0.87      1552\n",
+      "           1       0.64      0.55      0.59       561\n",
+      "\n",
+      "    accuracy                           0.80      2113\n",
+      "   macro avg       0.74      0.72      0.73      2113\n",
+      "weighted avg       0.79      0.80      0.79      2113\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "model_lr = LogisticRegression(random_state=42, max_iter=1000)\n",
+    "model_lr.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "y_pred_lr = model_lr.predict(X_test_scaled)\n",
+    "print(\"Reporte clasificación - Regresión Logística\")\n",
+    "print(classification_report(y_test, y_pred_lr))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fa184e5",
+   "metadata": {},
+   "source": [
+    "Modelo 2: Random Forest (sin normalización)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "adb67512",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reporte clasificación - Random Forest\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.83      0.89      0.86      1552\n",
+      "           1       0.62      0.49      0.55       561\n",
+      "\n",
+      "    accuracy                           0.79      2113\n",
+      "   macro avg       0.73      0.69      0.70      2113\n",
+      "weighted avg       0.77      0.79      0.78      2113\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "model_rf = RandomForestClassifier(random_state=42)\n",
+    "model_rf.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_rf = model_rf.predict(X_test)\n",
+    "print(\"Reporte clasificación - Random Forest\")\n",
+    "print(classification_report(y_test, y_pred_rf))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d38e766",
+   "metadata": {},
+   "source": [
+    "**Justificación breve**\n",
+    "- Regresión Logística: Requiere normalización porque las variables en diferentes escalas afectan el cálculo de los coeficientes y la función de optimización.\n",
+    "\n",
+    "- Random Forest: No requiere normalización porque divide el espacio de características por valores umbral y no utiliza distancias o funciones que dependan de la escala."
+   ]
   }
  ],
  "metadata": {
