--- a/telecom_X2.ipynb
+++ b/telecom_X2.ipynb
@@ -2409,12 +2409,450 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fadfb58b",
+   "metadata": {},
+   "source": [
+    "# 📋 Interpretación y Conclusiones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6860386a",
+   "metadata": {},
+   "source": [
+    "## Análisis de la Importancia de las Variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26461939",
+   "metadata": {},
+   "source": [
+    "Después de elegir los modelos, realiza el análisis de las variables más relevantes para la predicción de la cancelación:\n",
+    "\n",
+    "- Regresión Logística: Investiga los coeficientes de las variables, que muestran su contribución a la predicción de cancelación.\n",
+    "\n",
+    "- KNN (K-Nearest Neighbors): Observa cómo los vecinos más cercanos influyen en la decisión de clasificación. Las variables más impactantes pueden ser aquellas que más contribuyen a la proximidad entre los puntos de datos.\n",
+    "\n",
+    "- Random Forest: Utiliza la importancia de las variables proporcionada por el modelo. Random Forest calcula la importancia basándose en cómo cada variable contribuye a la reducción de la impureza durante las divisiones de los árboles.\n",
+    "\n",
+    "- SVM (Support Vector Machine): En el SVM, las variables más relevantes son aquellas que influyen en la frontera de decisión entre las clases. Puedes analizar los coeficientes de los vectores de soporte para entender qué variables tienen mayor impacto.\n",
+    "\n",
+    "- Otros Modelos: Dependiendo del modelo elegido, considera el análisis de métricas específicas para comprender la relevancia de las variables. Por ejemplo, coeficientes en modelos lineales, pesos en redes neuronales, o la importancia relativa en técnicas de boosting (como XGBoost)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b50d8582",
+   "execution_count": 80,
+   "id": "58c0d87f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "# Crear modelo KNN\n",
+    "model_knn = KNeighborsClassifier(n_neighbors=5)\n",
+    "model_knn.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Predicciones\n",
+    "y_pred_knn = model_knn.predict(X_test_scaled)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "8091bee4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "# Crear modelo SVM\n",
+    "model_svm = SVC(random_state=42)\n",
+    "model_svm.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Predicciones\n",
+    "y_pred_svm = model_svm.predict(X_test_scaled)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "190d58ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔹 Resultados del modelo KNN:\n",
+      "Accuracy: 0.754850922858495\n",
+      "Precision: 0.7502621242437438\n",
+      "Recall: 0.754850922858495\n",
+      "F1 Score: 0.752348554669461\n",
+      "Matriz de Confusión:\n",
+      "[[1310  242]\n",
+      " [ 276  285]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
+    "\n",
+    "print(\"🔹 Resultados del modelo KNN:\")\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred_knn))\n",
+    "print(\"Precision:\", precision_score(y_test, y_pred_knn, average='weighted'))\n",
+    "print(\"Recall:\", recall_score(y_test, y_pred_knn, average='weighted'))\n",
+    "print(\"F1 Score:\", f1_score(y_test, y_pred_knn, average='weighted'))\n",
+    "print(\"Matriz de Confusión:\")\n",
+    "print(confusion_matrix(y_test, y_pred_knn))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "11d62feb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🔹 Resultados del modelo SVM:\n",
+      "Accuracy: 0.7979176526265973\n",
+      "Precision: 0.785991665667984\n",
+      "Recall: 0.7979176526265973\n",
+      "F1 Score: 0.7868920786792788\n",
+      "Matriz de Confusión:\n",
+      "[[1414  138]\n",
+      " [ 289  272]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n🔹 Resultados del modelo SVM:\")\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred_svm))\n",
+    "print(\"Precision:\", precision_score(y_test, y_pred_svm, average='weighted'))\n",
+    "print(\"Recall:\", recall_score(y_test, y_pred_svm, average='weighted'))\n",
+    "print(\"F1 Score:\", f1_score(y_test, y_pred_svm, average='weighted'))\n",
+    "print(\"Matriz de Confusión:\")\n",
+    "print(confusion_matrix(y_test, y_pred_svm))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fabd172",
+   "metadata": {},
+   "source": [
+    "### 🔍 1. Regresión Logística – Coeficientes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e83e77a8",
+   "metadata": {},
+   "source": [
+    "Los coeficientes indican cuánto influye cada variable en la probabilidad de cancelación. Un valor positivo aumenta la probabilidad de churn, uno negativo la reduce."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "cb5baae0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔎 Variables más influyentes (Regresión Logística):\n",
+      "                                  Variable  Coeficiente  Importancia_absoluta\n",
+      "3                          customer_tenure    -1.471333              1.471333\n",
+      "20               account_Contract_Two year    -1.280576              1.280576\n",
+      "18             internet_InternetService_No    -0.820812              0.820812\n",
+      "17    internet_InternetService_Fiber optic     0.776749              0.776749\n",
+      "19               account_Contract_One year    -0.725881              0.725881\n",
+      "14                   account_Charges_Total     0.712936              0.712936\n",
+      "4                       phone_PhoneService    -0.549276              0.549276\n",
+      "9                     internet_TechSupport    -0.416536              0.416536\n",
+      "12                account_PaperlessBilling     0.415458              0.415458\n",
+      "22  account_PaymentMethod_Electronic check     0.369061              0.369061\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Extraer coeficientes\n",
+    "coeficientes = model_lr.coef_[0]\n",
+    "features = X_train_scaled.columns\n",
+    "\n",
+    "# Crear DataFrame ordenado\n",
+    "df_coef_lr = pd.DataFrame({'Variable': features, 'Coeficiente': coeficientes})\n",
+    "df_coef_lr['Importancia_absoluta'] = np.abs(df_coef_lr['Coeficiente'])\n",
+    "df_coef_lr = df_coef_lr.sort_values(by='Importancia_absoluta', ascending=False)\n",
+    "\n",
+    "print(\"🔎 Variables más influyentes (Regresión Logística):\")\n",
+    "print(df_coef_lr.head(10))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2e44564",
+   "metadata": {},
+   "source": [
+    "### 🌲 2. Random Forest – Importancia de las variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbb6b69b",
+   "metadata": {},
+   "source": [
+    "Random Forest proporciona automáticamente una medida de importancia de cada variable basada en las reducciones de impureza (Gini o Entropía)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "1cb92971",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🌲 Variables más importantes (Random Forest):\n",
+      "                                  Variable  Importancia\n",
+      "14                   account_Charges_Total     0.173814\n",
+      "3                          customer_tenure     0.157419\n",
+      "13                 account_Charges_Monthly     0.142296\n",
+      "15                  estimated_daily_charge     0.116028\n",
+      "17    internet_InternetService_Fiber optic     0.039526\n",
+      "22  account_PaymentMethod_Electronic check     0.036190\n",
+      "20               account_Contract_Two year     0.032248\n",
+      "16                    customer_gender_Male     0.026154\n",
+      "19               account_Contract_One year     0.025156\n",
+      "12                account_PaperlessBilling     0.023848\n"
+     ]
+    }
+   ],
+   "source": [
+    "importances = model_rf.feature_importances_\n",
+    "features = X_train.columns\n",
+    "\n",
+    "df_importance_rf = pd.DataFrame({'Variable': features, 'Importancia': importances})\n",
+    "df_importance_rf = df_importance_rf.sort_values(by='Importancia', ascending=False)\n",
+    "\n",
+    "print(\"🌲 Variables más importantes (Random Forest):\")\n",
+    "print(df_importance_rf.head(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d7c88de",
+   "metadata": {},
+   "source": [
+    "### 👥 3. KNN – No tiene coeficientes directos, pero puedes usar técnicas como:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4d6829c",
+   "metadata": {},
+   "source": [
+    "Opción 1: Permutation Importance\n",
+    "Evalúa cómo cambia el desempeño del modelo al permutar cada variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "b7ef1506",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "👥 Variables más importantes (KNN - Permutation Importance):\n",
+      "                                Variable  Importancia\n",
+      "3                        customer_tenure     0.009749\n",
+      "14                 account_Charges_Total     0.005159\n",
+      "13               account_Charges_Monthly     0.003124\n",
+      "15                estimated_daily_charge     0.002792\n",
+      "18           internet_InternetService_No     0.000947\n",
+      "20             account_Contract_Two year     0.000710\n",
+      "4                     phone_PhoneService     0.000379\n",
+      "17  internet_InternetService_Fiber optic     0.000142\n",
+      "19             account_Contract_One year     0.000095\n",
+      "6                internet_OnlineSecurity    -0.000994\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.inspection import permutation_importance\n",
+    "\n",
+    "result_knn = permutation_importance(model_knn, X_test_scaled, y_test, n_repeats=10, random_state=42)\n",
+    "\n",
+    "df_perm_knn = pd.DataFrame({\n",
+    "    'Variable': X_test_scaled.columns,\n",
+    "    'Importancia': result_knn.importances_mean\n",
+    "}).sort_values(by='Importancia', ascending=False)\n",
+    "\n",
+    "print(\"👥 Variables más importantes (KNN - Permutation Importance):\")\n",
+    "print(df_perm_knn.head(10))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95025bde",
+   "metadata": {},
+   "source": [
+    "### 🧠 4. SVM – Coeficientes del modelo lineal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1001d94d",
+   "metadata": {},
+   "source": [
+    "En un SVM lineal, los coeficientes (model.coef_) indican qué variables definen el margen de separación entre clases."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "89f029b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🧠 Variables más influyentes (SVM Lineal):\n",
+      "                                  Variable  Coeficiente  Importancia_absoluta\n",
+      "17    internet_InternetService_Fiber optic     1.195874              1.195874\n",
+      "3                          customer_tenure    -0.682983              0.682983\n",
+      "4                       phone_PhoneService    -0.426891              0.426891\n",
+      "18             internet_InternetService_No    -0.426525              0.426525\n",
+      "19               account_Contract_One year    -0.377111              0.377111\n",
+      "9                     internet_TechSupport    -0.364037              0.364037\n",
+      "22  account_PaymentMethod_Electronic check     0.274749              0.274749\n",
+      "12                account_PaperlessBilling     0.241304              0.241304\n",
+      "5                      phone_MultipleLines     0.215963              0.215963\n",
+      "6                  internet_OnlineSecurity    -0.211023              0.211023\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "model_svm_linear = SVC(kernel='linear', random_state=42)\n",
+    "model_svm_linear.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Ahora sí podemos obtener coef_\n",
+    "df_coef_svm = pd.DataFrame({\n",
+    "    'Variable': X_train_scaled.columns,\n",
+    "    'Coeficiente': model_svm_linear.coef_[0]\n",
+    "})\n",
+    "df_coef_svm['Importancia_absoluta'] = abs(df_coef_svm['Coeficiente'])\n",
+    "df_coef_svm = df_coef_svm.sort_values(by='Importancia_absoluta', ascending=False)\n",
+    "\n",
+    "print(\"🧠 Variables más influyentes (SVM Lineal):\")\n",
+    "print(df_coef_svm.head(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "856c19ba",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b85f718b",
+   "metadata": {},
+   "source": [
+    "Elaboren un informe detallado, destacando los factores que más influyen en la cancelación, basándose en las variables seleccionadas y en el rendimiento de cada modelo.\n",
+    "\n",
+    "Identifiquen los principales factores que afectan la cancelación de clientes y propongan estrategias de retención basadas en los resultados obtenidos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "691f0bc0",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---\n",
+    "\n",
+    "## Informe de Conclusión: Análisis de Cancelación de Clientes en Telecom X\n",
+    "\n",
+    "### 1. Resumen General\n",
+    "\n",
+    "Se desarrollaron y evaluaron cuatro modelos predictivos para anticipar la cancelación de clientes: Regresión Logística, Random Forest, KNN y SVM. Cada modelo identificó variables clave que influyen en la probabilidad de churn, permitiendo entender mejor los factores determinantes y diseñar estrategias de retención.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 2. Factores Más Influyentes en la Cancelación\n",
+    "\n",
+    "#### a) **Tiempo de permanencia del cliente (customer_tenure)**\n",
+    "- Consistentemente aparece como la variable con mayor importancia en todos los modelos.\n",
+    "- Coeficiente negativo en modelos lineales indica que a mayor tiempo como cliente, menor probabilidad de cancelar.\n",
+    "- Estrategia: Enfocar campañas de fidelización en clientes nuevos o con baja antigüedad para aumentar su retención.\n",
+    "\n",
+    "#### b) **Tipo de contrato (account_Contract)**\n",
+    "- Contratos a largo plazo (dos años, un año) disminuyen la probabilidad de cancelación.\n",
+    "- Clientes con contrato mes a mes son más propensos a cancelar.\n",
+    "- Estrategia: Incentivar contratos de mayor duración mediante descuentos o beneficios exclusivos.\n",
+    "\n",
+    "#### c) **Tipo de servicio de internet (internet_InternetService)**\n",
+    "- Clientes con servicio por fibra óptica tienen mayor riesgo de churn según regresión logística y SVM (coeficiente positivo).\n",
+    "- Ausencia de servicio de internet reduce la probabilidad de cancelar (quizá clientes con menos servicios tienen menos motivos para irse).\n",
+    "- Estrategia: Mejorar la calidad y atención en servicios de fibra óptica, incluyendo soporte técnico proactivo.\n",
+    "\n",
+    "#### d) **Cargos totales y mensuales (account_Charges_Total y account_Charges_Monthly)**\n",
+    "- Mayor gasto total y mensual se asocia con mayor probabilidad de cancelación.\n",
+    "- Posible indicio de insatisfacción por costos elevados o consumo no acorde a expectativas.\n",
+    "- Estrategia: Revisar planes y tarifas, ofrecer promociones personalizadas para clientes con altos cargos.\n",
+    "\n",
+    "#### e) **Método de pago y facturación sin papel (account_PaymentMethod y account_PaperlessBilling)**\n",
+    "- Algunos métodos de pago como \"Electronic check\" están relacionados con mayor churn.\n",
+    "- La facturación sin papel también tiene impacto positivo en la cancelación.\n",
+    "- Estrategia: Incentivar métodos de pago automáticos y tradicionales, mejorar comunicación para clientes con facturación electrónica.\n",
+    "\n",
+    "#### f) **Soporte técnico y servicios adicionales**\n",
+    "- El acceso a soporte técnico (internet_TechSupport) y servicios como Phone Service disminuyen la probabilidad de churn.\n",
+    "- Estrategia: Fortalecer el soporte técnico y promover servicios complementarios para aumentar la satisfacción.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 3. Evaluación y Selección de Modelos\n",
+    "\n",
+    "- **Regresión Logística y SVM**: Buen desempeño, permiten interpretar fácilmente la influencia de variables gracias a sus coeficientes.\n",
+    "- **Random Forest**: Proporciona una medida robusta de importancia y maneja bien interacciones no lineales.\n",
+    "- **KNN**: Menor importancia relativa, pero útil para patrones basados en proximidad.\n",
+    "\n",
+    "Se recomienda usar una combinación de estos modelos para mejorar la precisión predictiva y contar con interpretabilidad.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 4. Estrategias de Retención Basadas en Resultados\n",
+    "\n",
+    "- **Campañas focalizadas en clientes recientes**: Ofrecer incentivos para reducir cancelación temprana.\n",
+    "- **Ofertas para contratos largos**: Mejorar el compromiso y disminuir la rotación.\n",
+    "- **Optimizar planes y tarifas para clientes de alto gasto**: Evitar que los cargos elevados sean motivo de cancelación.\n",
+    "- **Mejorar experiencia en fibra óptica y soporte técnico**: Minimizar problemas técnicos que lleven a la insatisfacción.\n",
+    "- **Monitorear métodos de pago y facturación**: Promover canales que reduzcan la probabilidad de churn.\n",
+    "\n",
+    "---"
+   ]
   }
  ],
  "metadata": {
